--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,26 @@
 
           Upon submitting the form, simply print the value to the console
       -->
+
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <div formGroupName="userData">
+          <div class="form-group">
+            <label for="projectname">Project name</label>
+            <input type="text" id="projectname" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" class="form-control">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="status">Project status</label>
+          <select class="form-control" name="status" id="status">
+            <option *ngFor="let s of status" [value]="s">{{s}}</option>
+          </select>
+        </div>
+      </form>
+
     </div>
   </div>
 </div>
