--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,22 +16,30 @@
       -->
 
       <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-        <div formGroupName="userData">
+        <div formGroupName="projectData">
           <div class="form-group">
-            <label for="projectname">Project name</label>
-            <input type="text" id="projectname" class="form-control">
+            <label for="name">Project name</label>
+            <input type="text" id="name" formControlName="name" class="form-control">
+            <span *ngIf="!signupForm.get('projectData.name').valid && signupForm.get('projectData.name').touched">
+              <span *ngIf="signupForm.get('projectData.name').errors['nameIsForbidden']">This name is invalid!</span>
+              <span *ngIf="signupForm.get('projectData.name').errors['required']">This field is required</span>
+            </span>
           </div>
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" class="form-control">
+            <input type="email" id="email" formControlName="email" class="form-control">
+            <span *ngIf="!signupForm.get('projectData.email').valid && signupForm.get('projectData.email').touched">
+              <span *ngIf="signupForm.get('projectData.email').errors['required']">This field is required</span>
+            </span>
           </div>
         </div>
         <div class="form-group">
           <label for="status">Project status</label>
-          <select class="form-control" name="status" id="status">
+          <select class="form-control" name="status" id="status" formControlName="status">
             <option *ngFor="let s of status" [value]="s">{{s}}</option>
           </select>
         </div>
+        <button [disabled]="!valid" class="btn btn-primary" type="submit">Submit</button>
       </form>
 
     </div>
